@@ -130,6 +130,13 @@ function Round.endeffect( Effect, Bullet )
 		Flash:SetOrigin( Bullet.SimPos )
 		Flash:SetNormal( Bullet.SimFlight:GetNormalized() )
 		Flash:SetRadius( math.max( Radius, 1 ) )
+		
+		local vec = Bullet.Crate:GetNetworkedVector( "TracerColour" )
+		if not vec then
+			local col = Bullet.Crate:GetColor()
+			vec = Vector(col.r, col.g, col.b)
+		end
+		Flash:SetStart(vec)
 	util.Effect( "ACF_Smoke", Flash )
 
 end
